--- a/arch/arm64/configs/RMX1801_defconfig
+++ b/arch/arm64/configs/RMX1801_defconfig
@@ -4787,11 +4787,9 @@ CONFIG_FUSE_FS=y
 #
 # DOS/FAT/NT Filesystems
 #
+CONFIG_FAT_FS=y
+CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
-CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
-CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
-CONFIG_SDFAT_CHECK_RO_ATTR=y
-# CONFIG_SDFAT_DEBUG is not set
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # CONFIG_NTFS_FS is not set
@@ -4846,6 +4844,9 @@ CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NCP_FS is not set
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
+CONFIG_NLS=y
+CONFIG_NLS_DEFAULT="iso8859-1"
+CONFIG_NLS_CODEPAGE_437=y
 # CONFIG_NLS_CODEPAGE_737 is not set
 # CONFIG_NLS_CODEPAGE_775 is not set
 # CONFIG_NLS_CODEPAGE_850 is not set
@@ -4896,6 +4897,8 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_FILE_TABLE_DEBUG is not set
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
 # CONFIG_EXFAT_DELAYED_SYNC is not set
 # CONFIG_EXFAT_KERNEL_DEBUG is not set
 # CONFIG_EXFAT_DEBUG_MSG is not set
