defconfig: enable net_sch_cake and set as default

--- a/arch/arm64/configs/RMX1801_defconfig
+++ b/arch/arm64/configs/RMX1801_defconfig
@@ -5426,3 +5426,7 @@ CONFIG_WIREGUARD=y
 CONFIG_POWERSUSPEND=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_PM_WAKELOCKS_SENSOR_IND_HACK=y
+CONFIG_NET_SCH_CAKE=y
+# CONFIG_DEFAULT_FQ_CODEL is not set
+CONFIG_DEFAULT_CAKE=y
+CONFIG_DEFAULT_NET_SCH="cake"
